<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tictactoe">

    <ImageButton
        android:id="@+id/ib_about_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/cd_info"
        android:onClick="setScreenAbout"
        android:src="@android:drawable/ic_dialog_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

    <ImageButton
        android:id="@+id/ib_title_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/cd_settings"
        android:onClick="setScreenSettings"
        android:src="@android:drawable/ic_menu_preferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

    <Button
        android:id="@+id/btn_newPVE"
        android:layout_width="172dp"
        android:layout_height="76dp"
        android:background="@drawable/buttonroundedright"
        android:backgroundTint="#AF8FE9"
        android:contentDescription="@string/NewGamePVE"
        android:onClick="newGame"
        android:text="@string/NewGamePVE"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/iv_placeholder" />

    <Button
        android:id="@+id/btn_newPVP"
        android:layout_width="172dp"
        android:layout_height="76dp"
        android:background="@drawable/buttonroundedleft"
        android:contentDescription="@string/cd_newPVP"
        android:onClick="newGame"
        android:text="@string/NewGamePVP"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/iv_placeholder"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_placeholder"
        android:layout_width="5dp"
        android:layout_height="76dp"
        android:background="#212121"
        android:backgroundTint="#212121"
        android:scrollbarSize="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        app:srcCompat="@drawable/middleline" />

</androidx.constraintlayout.widget.ConstraintLayout>