<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlb_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_about_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/cd_back"
            android:onClick="backToLastScreen"
            android:src="?attr/homeAsUpIndicator"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="10dp" />

        <TextView
            android:id="@+id/tlb_tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/Abt_TicTacToe"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="18dp" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_tictactoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/TicTacToe"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlb_about"
        app:layout_constraintVertical_bias="0.050000012" />

    <ImageView
        android:id="@+id/iv_tictactoe_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/tictactoe_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tictactoe"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/version"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_tictactoe_logo"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/tv_dev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/developer"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_version" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/email"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dev" />

</androidx.constraintlayout.widget.ConstraintLayout>